fixed registration page alignment issue

--- a/src/client/features/auth/AuthForm.css
+++ b/src/client/features/auth/AuthForm.css
@@ -18,6 +18,26 @@
   color: whitesmoke;
 }
 
+.firstname-label,
+.lastname-label,
+.email-label {
+  /* margin-right: 17px; */
+  color: whitesmoke;
+  margin-right: 5px;
+  direction:ltr;
+}
+
+.firstname-label{
+  order: 1;
+}
+.lastname-label{
+  order: 2;
+}
+.email-label{
+  order: 3;
+  margin-left: 35px;
+}
+
 .loginInput {
   margin-left: 8px;
   margin-top: 20px;
@@ -31,9 +51,12 @@
 .otherFields {
   display: flex;
   flex-direction: column;
-  align-items: first baseline;
-  position: relative;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+
 }
+
 #usernameInput {
   margin-left: 10px;
 }
@@ -42,12 +65,12 @@
 }
 
 #lastname {
-  position: absolute;
-  left: 300px;
+  /* position: absolute;
+  left: 300px; */
 }
-#emailInput {
-  margin-left: 49px;
-}
+
+
+
 
 .needAccount-text {
   color: red;
@@ -75,3 +98,20 @@
   color: #233142;
 }
 
+@media (max-width: 600px) {
+  #login-div {
+    margin-top: 5em;
+    text-align: center;
+  }
+  #lastnameInput{
+    margin-left: 5px;
+  }
+
+  #emailInput {
+    margin-left: 40px;
+  }
+
+  #firstnameInput {
+    margin-left: 5px;
+  }
+}
